# rubot_mecanum_ws-sergio

./: .gitignore  README.md  gitreadmeexample
Documentation/: 1_rubot_mecanum_model&control.ipynb  2_rubot_mecanum_control_HW.ipynb  3_rubot_mecanum_SLAM.ipynb  4_rubot_mecanum_SLAM_HW.ipynb  5_Air Quality Sensors.ipynb
Documentation/Images/: Figures_Tutorial.pptx  Mecanum_Images.pptx
Documentation/files/Complementary_Information/ROS_DriverMega2560/xbox-teleop/: CMakeLists.txt  package.xml
Documentation/files/Complementary_Information/ROS_DriverMega2560/xbox-teleop/include/teleop_twist_joy/: teleop_twist_joy.h
Documentation/files/Complementary_Information/ROS_DriverMega2560/xbox-teleop/launch/: teleop.launch
Documentation/files/Complementary_Information/ROS_DriverMega2560/xbox-teleop/src/: teleop_twist_joy.cpp
src/robot_description/rubot_mecanum/: CMakeLists.txt  package.xml
src/robot_description/rubot_mecanum/config/: joint_names_rubot_mecanum.yaml
src/robot_description/rubot_mecanum/launch/: display.launch  gazebo.launch  rubot_world.launch
src/robot_description/rubot_mecanum/meshes/: Coberta_Link.STL  L1_Link.STL  L2_Link.STL  Lidar_Link.STL  ML1_Link.STL  ML2_Link.STL  MR1_Link.STL  MR2_Link.STL  R1_Link.STL  R2_Link.STL  SuportCentre1_Link.STL  SuportCentre2_Link.STL  SuportL1_Link.STL  SuportL2_Link.STL  SuportLidar_Link.STL  SuportR1_Link.STL  SuportR2_Link.STL  base_link.STL
src/robot_description/rubot_mecanum/rviz/: urdf.rviz  urdf_final.rviz
src/robot_description/rubot_mecanum/urdf/: prototip_2904.csv  rubot_mecanum.urdf
(+96 files in other folders)
