<package format="2">
  <name>rubot_mecanum</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for rubot_mecanum</p>
    <p>This package contains configuration data, 3D models and launch files
for rubot_mecanum robot</p>
  </description>
  <author>mpuig</author>
  <maintainer email="manel.puig@ub.edu" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>